--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular": "~1.2.6"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.6"
+    "angular-mocks": "~1.2.6",
+    "angular-ui-router": "~0.2.7"
   }
 }
